--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 	  <br />
 		<h3>Real Decrets</h3>
 		<div class="row">
-		  <div class="col-sm-2">#</div>
+		  <div class="col-sm-2">Avaluació i Promoció.</div>
 		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="#">#</a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2021-18812">Real Decreto 984/2021, de 16 de noviembre, por el que se regulan la evaluación y la promoción en la Educación Primaria, así como la evaluación, la promoción y la titulación en la Educación Secundaria Obligatoria, el Bachillerato y la Formación Profesional.</a></div>
 		</div>
   </div>
   
@@ -85,28 +85,122 @@
   <div class="tab-pane fade show active" id="Decrets">
 	  <br />
 		<h3>Decrets</h3>
+
 		<div class="row">
-		  <div class="col-sm-2">ROF</div>
+		  <div class="col-sm-2">Principis d'equitat i d'inclusió</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/7822&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=7822&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 104/2018, de 27 de juliol, del Consell, pel qual es desenvolupen els principis d'equitat i d'inclusió en el sistema educatiu valencià. [2018/7822]</a></div>
+		</div>
+
+		<div class="row">
+		  <div class="col-sm-2">ROF Infantil i Primària</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/11482&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11482&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 253/2019, de 29 de novembre, del Consell, de regulació de l'organització i el funcionament dels centres públics que imparteixen ensenyaments d'Educació Infantil o d'Educació Primària. [2019/11482]</a></div>
 		</div>
+
+		<div class="row">
+		  <div class="col-sm-2">Organització Orientació</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/6157&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=6157&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 72/2021, de 21 de maig, del Consell, d'organització de l'orientació educativa i professional en el sistema educatiu valencià. [2021/6157]</a></div>
+		</div>
+
+
   </div>
   
   
   <div class="tab-pane fade show active" id="Ordres">
 	  <br />
 		<h3>Ordres</h3>
+
+		<div class="row">
+		  <div class="col-sm-2">Organització Resposta Educativa</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/4442&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=4442&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">https://dogv.gva.es/va/resultat-dogv?signatura=2019/4442&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=4442&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=</a></div>
+		</div>
+  </div>
+
 		<div class="row">
 		  <div class="col-sm-2">Transició Primària-Secundària</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2011/7216&L=0&&texto=&solo_titulo=1&anyo_codigo=2011&codigo=7216&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDE 46/2011, de 8 de juny, de la Conselleria d'Educació, per la qual es regula la transició des de l'etapa d'Educació Primària a l'Educació Secundària Obligatòria a la Comunitat Valenciana. [2011/7216]</a></div>
 		</div>
+
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">Unitats Específiques Orientació</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href=https://dogv.gva.es/va/resultat-dogv?signatura=2021/7529&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7529&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 23/2021, de 6 de juliol, de la Conselleria d'Educació, Cultura i Esport, per la qual es determinen els criteris de creació de llocs de professorat de l'especialitat d'Orientació Educativa en els equips d'Orientació Educativa, i per la qual s'ordena la creació de les unitats especialitzades d'Orientació. [2021/7529]</a></div>
+		</div>
+
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">Full de notificació Atenció SocioPrisopedagògica</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/7878&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7878&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 5/2021, de 15 de juliol, de la Vicepresidència i Conselleria d'Igualtat i Polítiques Inclusives i de la Conselleria d'Educació, Cultura i Esport, per la qual s'aprova el nou full de notificació per a l'atenció socioeducativa infantil i protecció de l'alumnat menor d'edat i s'estableix la coordinació interadministrativa per a la protecció integral de la infància i adolescència. [2021/7878]</a></div>
+		</div>
+
+
   </div>
   
   
   <div class="tab-pane fade show active" id="Resolució">
 	  <br />
 		<h3>Resolució</h3>
+		
+		<div class="row">
+		  <div class="col-sm-2">Detecció i Atenció Precoç</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2017/11874&L=0&&texto=&solo_titulo=1&anyo_codigo=2017&codigo=11874&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ conjunta d'11 de desembre de 2017 de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública per la qual es dicten instruccions per a la detecció i l'atenció precoç de l'alumnat que puga presentar un problema de salut mental. [2017/11874]</a></div>
+		</div>
+		
+		<div class="row">
+		  <div class="col-sm-2">Acollida Nouvingut</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/5664&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=5664&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 5 de juny de 2018, de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es dicten instruccions i orientacions per a actuar en l'acollida d'alumnat nouvingut, especialment el desplaçat, als centres educatius de la Comunitat Valenciana. [2018/5664]</a></div>
+		</div>
+		
+		<div class="row">
+		  <div class="col-sm-2">Problemes de salut crònica</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2018&codigo=5900&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 13 de juny de 2018, de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública, per la qual es dicten instruccions i orientacions d'atenció sanitària específica en centres educatius per a regular l'atenció sanitària a l'alumnat amb problemes de salut crònica en horari escolar, l'atenció a la urgència, així com l'administració de medicaments i l'existència de farmacioles en els centres escolars. [2018/5900]</a></div>
+		</div>
+
+		<br />	
+
+		<div class="row">
+		  <div class="col-sm-2">ROF Centre Específic</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2020/6396&L=0&&texto=&solo_titulo=1&anyo_codigo=2020&codigo=6396&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 31 juliol de 2020, de la directora general d'Inclusió Educativa, per la qual es regula, amb caràcter experimental, l'organització dels centres específics d'Educació Especial de titularitat de la Generalitat com a centres de recursos. [2020/6396]</a></div>
+		</div>
+
+		<br />	
+
+		<div class="row">
+		  <div class="col-sm-2">Absentisme Escolar</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/11082&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=11082&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 29 de setembre de 2021, de la directora general d'Inclusió Educativa, per la qual s'estableix el protocol d'actuació davant situacions d'absentisme escolar en els centres sostinguts amb fons públics de la Comunitat Valenciana que imparteixen ensenyaments obligatoris i Formació Professional Bàsica. [2021/11082]</a></div>
+		</div>
+
+		<br />	
+
+		<div class="row">
+		  <div class="col-sm-2">Línies Estratègiques Orientació i Acció Tutorial</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/9988&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=9988&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ d'1 d'octubre de 2021, de la directora general d'Inclusió Educativa, per la qual s'estableixen les línies estratègiques de l'orientació educativa i professional i de l'acció tutorial per al curs 2021-2022. [2021/9988]</a></div>
+		</div>
+
+		<br />	
+
+		<div class="row">
+		  <div class="col-sm-2">Detecció i Identificació NESE</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/13042&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=13042&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 23 de desembre de 2021, de la directora general d'Inclusió Educativa, per la qual es dicten instruccions per a la detecció i la identificació de les necessitats específiques de suport educatiu i les necessitats de compensació de desigualtats. [2021/13042]</a></div>
+		</div>
+
+
+
 		<div class="row">
 		  <div class="col-sm-2">Calendari Curs 2022-2023</div>
 		  <div class="col-sm-1">INDEX</div>
@@ -129,8 +223,31 @@
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6172&L=0" target="_blank"> RESOLUCIÓ de 28 de juny de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual s'estableix el Pla biennal de formació permanent del professorat corresponent als cursos 2022-2023 i 2023-2024. [2022/6172]</a></div>
 		</div>
 		
+
   </div>
   
+
+ 
+  <div class="tab-pane fade show active" id="Resolució">
+	  <br />
+		<h3>Instruccions</h3>
+
+		<br />
+		
+		<div class="row">
+		  <div class="col-sm-2">Educacors</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/172998495/Instruccio_DGIE_PEEE.pdf" target="_blank">INSTRUCCIÓ DE LA DIRECTORA GENERAL D’INCLUSIÓ EDUCATIVA PER LA QUAL S’ESTABLEIXEN ELS PROCEDIMENTS PER A LA REALITZACIÓ DE LES PROPOSTES DE REDISTRIBUCIÓ,AMPLIACIÓ,CREACIÓ O AMORTITZACIÓ DELS LLOCS DE PERSONAL EDUCADOR D’EDUCACIÓ ESPECIAL EN CENTRES DOCENTS DE TITULARITAT DE LA GENERALITAT</a></div>
+		</div>
+		
+
+
+  </div>
+
+
+
+
+
   
   <div class="tab-pane fade" id="dropdown1">
   </div>
