Instruccions Inici de Curs 2022-2023 Secundària i Batxiller

--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/7822&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=7822&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 104/2018, de 27 de juliol, del Consell, pel qual es desenvolupen els principis d'equitat i d'inclusió en el sistema educatiu valencià. [2018/7822]</a></div>
 		</div>
 
+		<br />
+
 		<div class="row">
 		  <div class="col-sm-2">ROF Infantil i Primària</div>
 		  <div class="col-sm-1">INDEX</div>
@@ -263,6 +265,14 @@
 		  <div class="col-sm-2">Pla de Formació 2022-2023</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6172&L=0" target="_blank"> RESOLUCIÓ de 28 de juny de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual s'estableix el Pla biennal de formació permanent del professorat corresponent als cursos 2022-2023 i 2023-2024. [2022/6172]</a></div>
+		</div>
+		
+		<br />
+		
+		<div class="row">
+		  <div class="col-sm-2">Instruccions Secundària 2022-2023</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6761&L=0i" target="_blank">RESOLUCIÓ de 12 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Secundària Obligatòria i Batxillerat durant el curs 2022-2023 [2022/6761]</a></div>
 		</div>
 		
 
