--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 		<div class="row">
 		  <div class="col-sm-2">Avaluació i Promoció</div>
 		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/3449&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=3449&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ESOLUCIÓ de 20 d'abril de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual es dicten instruccions relatives a l'avaluació final i la promoció en Educació Primària, així com a l'avaluació final, la promoció i la titulació en Educació Secundària Obligatòria, en Batxillerat, en els ensenyaments de l'Educació de les Persones Adultes i en la Formació Professional per al curs 2021-2022. [2022/3449]</a><div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/3449&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=3449&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ESOLUCIÓ de 20 d'abril de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual es dicten instruccions relatives a l'avaluació final i la promoció en Educació Primària, així com a l'avaluació final, la promoció i la titulació en Educació Secundària Obligatòria, en Batxillerat, en els ensenyaments de l'Educació de les Persones Adultes i en la Formació Professional per al curs 2021-2022. [2022/3449]</a></div>
 		</div>
 		
 		<br />
@@ -296,7 +296,6 @@
 		
 
 
-  </div>
   </div>
 
   
