Curriculum de primària

--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/7878&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7878&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 5/2021, de 15 de juliol, de la Vicepresidència i Conselleria d'Igualtat i Polítiques Inclusives i de la Conselleria d'Educació, Cultura i Esport, per la qual s'aprova el nou full de notificació per a l'atenció socioeducativa infantil i protecció de l'alumnat menor d'edat i s'estableix la coordinació interadministrativa per a la protecció integral de la infància i adolescència. [2021/7878]</a></div>
 		</div>
 
+		<div class="row">
+		  <div class="col-sm-2">BOE - Currículum de Primària </div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=1" target="_blank">Orden EFP/678/2022, de 15 de julio, por la que se establece el currículo y se regula la ordenación de la Educación Primaria. </a></div>
+		</div>
+
 
   </div>
   
@@ -181,7 +187,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Detecció i Atenció Precoç</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2#">INDEX</a></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2017/11874&L=0&&texto=&solo_titulo=1&anyo_codigo=2017&codigo=11874&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ conjunta d'11 de desembre de 2017 de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública per la qual es dicten instruccions per a la detecció i l'atenció precoç de l'alumnat que puga presentar un problema de salut mental. [2017/11874]</a></div>
 		</div>
 		
