Competència Digital Docent

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="./digital.html">Digital</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
@@ -168,6 +168,8 @@
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/7878&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7878&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 5/2021, de 15 de juliol, de la Vicepresidència i Conselleria d'Igualtat i Polítiques Inclusives i de la Conselleria d'Educació, Cultura i Esport, per la qual s'aprova el nou full de notificació per a l'atenció socioeducativa infantil i protecció de l'alumnat menor d'edat i s'estableix la coordinació interadministrativa per a la protecció integral de la infància i adolescència. [2021/7878]</a></div>
 		</div>
+
+		<br />
 
 		<div class="row">
 		  <div class="col-sm-2">BOE - Currículum de Primària </div>
