Orientacons Programacions Infantil i Primària

--- a/digital.html
+++ b/digital.html
@@ -41,8 +41,8 @@
 
   <!-- Jumbotron -->
   <div class="p-5 text-center bg-light">
-    <h1 class="mb-3">Normativa</h1>
-    <h4 class="mb-3">Digital</h4>
+    <h1 class="mb-3">Competència Digital</h1>
+    <h4 class="mb-3">Normativa</h4>
     <a class="btn btn-primary" href="" role="button">GVA</a>
   </div>
   <!-- Jumbotron -->
