--- a/formacio.html
+++ b/formacio.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="./digital.html">Digital</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./formacio">Formació</a>
+            <a class="nav-link" href="./formacio.html">Formació</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
