--- a/digital.html
+++ b/digital.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
+          <a class="nav-link active" href="./digital.html">Digital
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
