--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
+          <a class="nav-link active" href="./index.html">Normativa
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
