Barra fixat menu

--- a/digital.html
+++ b/digital.html
@@ -14,7 +14,7 @@
  <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="./index.html">Normativa</a>
+    <a class="navbar-brand" href="./digital.html">Digital</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,10 +26,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./formacio.html">Formació</a>
+          <a class="nav-link" href="./index.html">Normativa</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./digital.html">Digital</a>
+          <a class="nav-link" href="./formacio.html">Formació</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
