--- a/formacio.html
+++ b/formacio.html
@@ -15,7 +15,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="./index.html">Normativa</a>
+    <a class="navbar-brand" href="./formacio.html">Formació</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,7 +27,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./formacio.html">Formació</a>
+          <a class="nav-link" href="./index.html">Normativa</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./digital.html">Digital</a>
