--- a/digital.html
+++ b/digital.html
@@ -11,28 +11,25 @@
 		 <div class="container-fluid">
 
 <header>
- <!-- Navbar -->
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="./digital.html">Digital</a>
+    <a class="navbar-brand" href="./index.html">Inici</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="./digital.html">Digital
+          <a class="nav-link active" href="./index.html">Normativa
             <span class="visually-hidden">(current)</span>
           </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./index.html">Normativa</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./formacio.html">Formació</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="./digital.html">Digital</a>
         </li>
       </ul>
     </div>
@@ -40,15 +37,16 @@
 </nav>
 <!-- Navbar -->
 
+
+</header>
+
+
   <!-- Jumbotron -->
   <div class="p-5 text-center bg-light">
     <h1 class="mb-3">Competència Digital</h1>
-    <h4 class="mb-3">Normativa</h4>
-    <a class="btn btn-primary" href="" role="button">GVA</a>
+    <h4 class="mb-3">Docent</h4>
   </div>
   <!-- Jumbotron -->
-</header>
-
 
 
 <div id="myTabContent" class="tab-content">
