--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <a class="btn btn-primary" href="./normativa.html" role="button">Normativa</a>
     <a class="btn btn-success" href="./formacio.html" role="button">Formació del Professorat</a>
     <a class="btn btn-info" href="./digital.html" role="button">Competència Digital</a>
+    <br />
+    <br />
+    <span class="badge bg-light ">Actualitzat <br /> 27.07.2022</span>
   </div>
   <!-- Jumbotron -->
 
