--- a/normativa.html
+++ b/normativa.html
@@ -61,13 +61,6 @@
 
 		<hr >
 
-		<div class="row">
-		  <div class="col-sm-2">LOMLOE</div>
-		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
-
-		</div>
-		
 		<br/>
 		
 		<div class="row">
@@ -75,6 +68,21 @@
 			<div class="col-sm-1">INDEX</div>
 			<div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
 		</div>
+
+		<div class="row">
+			<div class="col-sm-2">LOMCE</div>
+			<div class="col-sm-1">INDEX</div>
+			<div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2013-12886" target="_blank">Ley Orgánica 8/2013, de 9 de diciembre, para la mejora de la calidad educativa.</a></div>
+		</div>
+
+		<div class="row">
+		<div class="row">
+		  <div class="col-sm-2">LOMLOE</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
+
+		</div>
+		
   </div>
   
   
