--- a/normativa.html
+++ b/normativa.html
@@ -65,7 +65,7 @@
 		
 		<div class="row">
 			<div class="col-sm-2">LOE</div>
-			<div class="col-sm-1">INDEX</div>
+			<div class="col-sm-1"><span class="badge bg-info">MODIFICADA</span></div>
 			<div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
 		</div>
 
@@ -73,7 +73,7 @@
 		
 		<div class="row">
 			<div class="col-sm-2">LOMCE</div>
-			<div class="col-sm-1">INDEX</div>
+			<div class="col-sm-1"><span class="badge bg-danger">DEROGADA</span></div>
 			<div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2013-12886" target="_blank">Ley Orgánica 8/2013, de 9 de diciembre, para la mejora de la calidad educativa.</a></div>
 		</div>
 
@@ -81,7 +81,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">LOMLOE</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
 		  <div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
 
 		</div>
@@ -123,7 +123,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Secundària</div>
-		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975&p=20220330&tn=2">INDEX</a></div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975&p=20220330&tn=2"><button type="button" class="btn btn-success btn-sm">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975">Real Decreto 217/2022, de 29 de marzo, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Secundaria Obligatoria.</a></div>
 		</div>
 
@@ -131,7 +131,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Batxillerat</div>
-		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521&p=20220406&tn=2">INDEX</a></div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521&p=20220406&tn=2"><button type="button" class="btn btn-success btn-sm">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521">Real Decreto 243/2022, de 5 de abril, por el que se establecen la ordenación y las enseñanzas mínimas del Bachillerato. </a></div>
 		</div>
 
@@ -238,7 +238,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Detecció i Atenció Precoç</div>
-		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2#">INDEX</a></div>
+		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2#"><button type="button" class="btn btn-success btn-sm">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2017/11874&L=0&&texto=&solo_titulo=1&anyo_codigo=2017&codigo=11874&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ conjunta d'11 de desembre de 2017 de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública per la qual es dicten instruccions per a la detecció i l'atenció precoç de l'alumnat que puga presentar un problema de salut mental. [2017/11874]</a></div>
 		</div>
 
