Canvis menors en badges

--- a/normativa.html
+++ b/normativa.html
@@ -65,7 +65,7 @@
 		
 		<div class="row">
 			<div class="col-sm-2">LOE</div>
-			<div class="col-sm-1"><span class="badge bg-info">MODIFICADA</span></div>
+			<div class="col-sm-1"><span class="badge bg-info">MODIF.</span></div>
 			<div class="col-sm-8"><a href="https://boe.es/buscar/doc.php?id=BOE-A-2020-17264" target="_blank">Ley Orgánica 2/2006, de 3 de mayo, de Educación.</a></div>
 		</div>
 
@@ -73,7 +73,7 @@
 		
 		<div class="row">
 			<div class="col-sm-2">LOMCE</div>
-			<div class="col-sm-1"><span class="badge bg-danger">DEROGADA</span></div>
+			<div class="col-sm-1"><span class="badge bg-danger">DEROG.</span></div>
 			<div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2013-12886" target="_blank">Ley Orgánica 8/2013, de 9 de diciembre, para la mejora de la calidad educativa.</a></div>
 		</div>
 
