--- a/normativa.html
+++ b/normativa.html
@@ -123,7 +123,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Secundària</div>
-		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975&p=20220330&tn=2"><button type="button" class="btn btn-info btn-sm">Index</button></a></div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975&p=20220330&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-4975">Real Decreto 217/2022, de 29 de marzo, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Secundaria Obligatoria.</a></div>
 		</div>
 
@@ -131,7 +131,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Batxillerat</div>
-		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521&p=20220406&tn=2"><button type="button" class="btn btn-info btn-sm">Index</button></a></div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521&p=20220406&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-5521">Real Decreto 243/2022, de 5 de abril, por el que se establecen la ordenación y las enseñanzas mínimas del Bachillerato. </a></div>
 		</div>
 
@@ -238,7 +238,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Detecció i Atenció Precoç</div>
-		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2#"><button type="button" class="btn btn-info btn-sm">Index</button></a></div>
+		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2#"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2017/11874&L=0&&texto=&solo_titulo=1&anyo_codigo=2017&codigo=11874&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ conjunta d'11 de desembre de 2017 de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública per la qual es dicten instruccions per a la detecció i l'atenció precoç de l'alumnat que puga presentar un problema de salut mental. [2017/11874]</a></div>
 		</div>
 
