--- a/normativa.html
+++ b/normativa.html
@@ -218,7 +218,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">BOE - Currículum de Primària </div>
-		  <div class="col-sm-1"><button type="button" class="btn btn-info btn-sm" target="_blank"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2">Index</a></button></div>
+		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=1" target="_blank">Orden EFP/678/2022, de 15 de julio, por la que se establece el currículo y se regula la ordenación de la Educación Primaria. </a></div>
 		</div>
 
