Ensenyaments Mínims - Revisat

--- a/formacio.html
+++ b/formacio.html
@@ -22,12 +22,12 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="./index.html">Normativa
-            <span class="visually-hidden">(current)</span>
+          <a class="nav-link" href="./index.html">Normativa
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./formacio.html">Formació</a>
+          <a class="nav-link active" href="./formacio.html">Formació</a>
+            <span class="visually-hidden">(current)</span>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./digital.html">Digital</a>
