--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <a class="navbar-brand" href="./index.html">Inici</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
+            <span class="visually-hidden">(current)</span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="./normativa.html">Normativa
-            <span class="visually-hidden">(current)</span>
+          <a class="nav-link" href="./normativa.html">Normativa
           </a>
         </li>
         <li class="nav-item">
