--- a/normativa.html
+++ b/normativa.html
@@ -116,7 +116,7 @@
 		<div class="row">
 		  <div class="col-sm-2">Ensenyaments Mínims Primària</div>
 		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-3296&p=20220302&tn=2"><button type="button" class="btn btn-info btn-sm" target="_blank">INDEX</button><a/></div>
-		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-3296&p=20220302&tn=1" target="_blan_blankk">Real Decreto 157/2022, de 1 de marzo, por el que se establecen la ordenación y las enseñanzas mínimas de la Educación Primaria.</a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-3296&p=20220302&tn=1" target="_blank">Real Decreto 157/2022, de 1 de marzo, por el que se establecen la ordenación y las enseñanzas mínimas de la Educación Primaria.</a></div>
 		</div>
 
 		<br />
