--- a/normativa.html
+++ b/normativa.html
@@ -185,7 +185,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Organització Resposta Educativa</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><a href="https://ceice.gva.es/documents/169149987/174708226/PT_AL_INF.pdf"><button type="button" class="btn btn-success btn-sm" target="_blank">Infografia</button></a></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/4442&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=4442&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 20/2019, de 30 d'abril, de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es regula l'organització de la resposta educativa per a la inclusió de l'alumnat en els centres docents sostinguts amb fons públics del sistema educatiu valencià. [2019/4442]</a></div>
 		</div>
   </div>
@@ -239,7 +239,7 @@
 		
 		<div class="row">
 		  <div class="col-sm-2">Detecció i Atenció Precoç</div>
-		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-12066&p=20220721&tn=2#"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-1"><a href="https://ceice.gva.es/va/web/inclusioeducativa/protocols"><button type="button" class="btn btn-success btn-sm" target="_blank">Protocols</button></a></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2017/11874&L=0&&texto=&solo_titulo=1&anyo_codigo=2017&codigo=11874&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ conjunta d'11 de desembre de 2017 de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública per la qual es dicten instruccions per a la detecció i l'atenció precoç de l'alumnat que puga presentar un problema de salut mental. [2017/11874]</a></div>
 		</div>
 
@@ -256,7 +256,7 @@
 		<div class="row">
 		  <div class="col-sm-2">Problemes de salut crònica</div>
 		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2018&codigo=5900&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 13 de juny de 2018, de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública, per la qual es dicten instruccions i orientacions d'atenció sanitària específica en centres educatius per a regular l'atenció sanitària a l'alumnat amb problemes de salut crònica en horari escolar, l'atenció a la urgència, així com l'administració de medicaments i l'existència de farmacioles en els centres escolars. [2018/5900]</a></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/5900&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=5900&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 13 de juny de 2018, de la Conselleria d'Educació, Investigació, Cultura i Esport i de la Conselleria de Sanitat Universal i Salut Pública, per la qual es dicten instruccions i orientacions d'atenció sanitària específica en centres educatius per a regular l'atenció sanitària a l'alumnat amb problemes de salut crònica en horari escolar, l'atenció a la urgència, així com l'administració de medicaments i l'existència de farmacioles en els centres escolars. [2018/5900]</a></div>
 		</div>
 
 		<br />	
@@ -337,6 +337,14 @@
 		  <div class="col-sm-2">Instruccions Secundària 2022-2023</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6761&L=0i" target="_blank">RESOLUCIÓ de 12 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Secundària Obligatòria i Batxillerat durant el curs 2022-2023 [2022/6761]</a></div>
+		</div>
+		
+		<br />
+		
+		<div class="row">
+		  <div class="col-sm-2">Instruccions CEE 2022-2023</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7099&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=7099&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 21 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual es dicten instruccions per a l'organització i el funcionament dels centres d'educació especial sostinguts amb fons públics per al curs 2022-2023. [2022/7099]</a></div>
 		</div>
 		
  
