--- a/digital.html
+++ b/digital.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" href="./index.html">Normativa
+          <a class="nav-link" href="./normativa.html">Normativa
           </a>
         </li>
         <li class="nav-item">
