--- a/normativa.html
+++ b/normativa.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="./index.html">Normativa
+          <a class="nav-link active" href="./normativa.html">Normativa
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
@@ -150,7 +150,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Principis d'equitat i d'inclusió</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/7822&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=7822&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo="><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/7822&L=0&&texto=&solo_titulo=1&anyo_codigo=2018&codigo=7822&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 104/2018, de 27 de juliol, del Consell, pel qual es desenvolupen els principis d'equitat i d'inclusió en el sistema educatiu valencià. [2018/7822]</a></div>
 		</div>
 
@@ -158,7 +158,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">ROF Infantil i Primària</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/11482&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11482&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo="><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/11482&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=11482&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 253/2019, de 29 de novembre, del Consell, de regulació de l'organització i el funcionament dels centres públics que imparteixen ensenyaments d'Educació Infantil o d'Educació Primària. [2019/11482]</a></div>
 		</div>
 
@@ -166,7 +166,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Organització Orientació</div>
-		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-1"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/6157&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=6157&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo="><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/6157&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=6157&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">DECRET 72/2021, de 21 de maig, del Consell, d'organització de l'orientació educativa i professional en el sistema educatiu valencià. [2021/6157]</a></div>
 		</div>
 
@@ -310,7 +310,7 @@
 		<br />
 
 		<div class="row">
-		  <div class="col-sm-2">Calendari Curs 2022-2023</div>
+		  <div class="col-sm-2">2022-2023 Calendari Curs</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/5675&L=0" target="_blank"> RESOLUCIÓ de 14 de juny de 2022, del director general de Centres Docents, per la qual es fixa el calendari escolar del curs acadèmic 2022-2023 a la Comunitat Valenciana. [2022/5675] (DOGV núm. 9363 de 16.06.2022) Ref. Base de dades 005405/2022</a></div>
 		</div>
@@ -318,7 +318,7 @@
 		<br />
 		
 		<div class="row">
-		  <div class="col-sm-2">Instruccions Inici Curs 2022-2023</div>
+		  <div class="col-sm-2">2022-2023 Instruccions Inici Curs</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6454&L=0" target="_blank"> RESOLUCIÓ de 5 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Infantil de segon cicle i Educació Primària durant el curs 2022-2023. [2022/6454]</a></div>
 		</div>
@@ -326,7 +326,7 @@
 		<br />
 		
 		<div class="row">
-		  <div class="col-sm-2">Pla de Formació 2022-2023</div>
+		  <div class="col-sm-2">2022-2023 Pla de Formació</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6172&L=0" target="_blank"> RESOLUCIÓ de 28 de juny de 2022, de la Secretaria Autonòmica d'Educació i Formació Professional, per la qual s'estableix el Pla biennal de formació permanent del professorat corresponent als cursos 2022-2023 i 2023-2024. [2022/6172]</a></div>
 		</div>
@@ -334,7 +334,7 @@
 		<br />
 		
 		<div class="row">
-		  <div class="col-sm-2">Instruccions Secundària 2022-2023</div>
+		  <div class="col-sm-2">2022-2023 Instruccions Secundària</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6761&L=0i" target="_blank">RESOLUCIÓ de 12 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Secundària Obligatòria i Batxillerat durant el curs 2022-2023 [2022/6761]</a></div>
 		</div>
@@ -342,7 +342,7 @@
 		<br />
 		
 		<div class="row">
-		  <div class="col-sm-2">Instruccions CEE 2022-2023</div>
+		  <div class="col-sm-2">2022-2023 Instruccions CEE</div>
 		  <div class="col-sm-1">INDEX</div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7099&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=7099&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 21 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual es dicten instruccions per a l'organització i el funcionament dels centres d'educació especial sostinguts amb fons públics per al curs 2022-2023. [2022/7099]</a></div>
 		</div>
