--- a/digital.html
+++ b/digital.html
@@ -51,11 +51,94 @@
 
 <div id="myTabContent" class="tab-content">
 
+  <div class="tab-pane fade show active" id="Reglament">
+	  	<br />
+
+		<h3>Reglament UE</h3>
+		
+	  	<hr />
+
+		<div class="row">
+		  <div class="col-sm-2">Protecció de Dades</div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/doc.php?id=DOUE-L-2016-80807" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank"> Index</button></a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/doc.php?id=DOUE-L-2016-80807" target="_blank">Reglamento (UE) 2016/679 del Parlamento Europeo y del Consejo, de 27 de abril de 2016, relativo a la protección de las personas físicas en lo que respecta al tratamiento de datos personales y a la libre circulación de estos datos y por el que se deroga la Directiva 95/46/CE (Reglamento general de protección de datos).</a></div>
+
+		</div>
+		
+  </div>
+  
+
+
+
+  <div class="tab-pane fade show active" id="Llei">
+	  	<br />
+
+		<h3>Llei</h3>
+		
+	  	<hr />
+
+		<div class="row">
+		  <div class="col-sm-2">Procediment Administratiu</div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2015-10565&p=20220713&tn=2" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank"> Index</button></a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2015-10565&p=20220713&tn=1" target="_blank">Ley 39/2015, de 1 de octubre, del Procedimiento Administrativo Común de las Administraciones Públicas. </a></div>
+
+		</div>
+		
+		<br/>
+		
+
+		<div class="row">
+		  <div class="col-sm-2">Protecció de Dades</div>
+		  <div class="col-sm-1"><a href="https://boe.es/buscar/act.php?id=BOE-A-2018-16673&p=20210527&tn=2" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank"> Index</button></a></div>
+		  <div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2018-16673" target="_blank">Ley Orgánica 3/2018, de 5 de diciembre, de Protección de Datos Personales y garantía de los derechos digitales.</a></div>
+
+		</div>
+		
+		<br/>
+		
+  </div>
+  
+
+
+
+
+  <div class="tab-pane fade show active" id="Real Decret">
+
+	  	<br />
+
+		<h3>Real Decret</h3>
+		
+	  	<hr />
+
+		<div class="row">
+		  <div class="col-sm-2">Expedient de l'alumne</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2010-1331" target="_blank">Real Decreto 4/2010, de 8 de enero, por el que se regula el Esquema Nacional de Interoperabilidad en el ámbito de la Administración Electrónica.</a></div>
+
+		</div>
+		
+		<br/>
+		
+  </div>
+  
+
   <div class="tab-pane fade show active" id="Resolucio">
 
 	  	<br />
 
 		<h3>Resolució</h3>
+		
+	  	<hr />
+
+		<div class="row">
+		  <div class="col-sm-2">Protecció de Dades</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/11040&L=0" target="_blank">RESOLUCIÓ de 28 de juny de 2018, de la Sotssecretaria de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es dicten instruccions per al compliment de la normativa de protecció de dades en els centres educatius públics de titularitat de la Generalitat. [2018/11040]</a></div>
+
+		</div>
+		
+		<br/>
+
 		<div class="row">
 		  <div class="col-sm-2">Competència Digital Docent</div>
 		  <div class="col-sm-1">INDEX</div>
