--- a/digital.html
+++ b/digital.html
@@ -137,6 +137,13 @@
 
 		</div>
 		
+		<div class="row">
+		  <div class="col-sm-2">Certificació Competència Digital Docent</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="" target="_blank">Resolución de 1 de julio de 2022, de la Dirección General de Evaluación y Cooperación Territorial, por la que se publica el Acuerdo de la Conferencia Sectorial de Educación sobre la certificación, acreditación y reconocimiento de la competencia digital docente.</a></div>
+
+		</div>
+		
 		<br/>
 
 		<div class="row">
@@ -151,6 +158,68 @@
   </div>
   
 
+  <div class="tab-pane fade show active" id="Organismes">
+
+	  	<br />
+
+		<h3>Organismes</h3>
+		
+	  	<hr />
+
+		<div class="row">
+		  <div class="col-sm-2">España Digital</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://espanadigital.gob.es/" target="_blank">España Digital 2026</a></div>
+
+		</div>
+
+		<div class="row">
+		  <div class="col-sm-2">Transformació Digital</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://portal.mineco.gob.es/es-es/Paginas/index.aspx" target="_blank">Ministeri d'Afers Econòmics i de Transformació Digital</a></div>
+
+		</div>
+
+
+  </div>
+
+  		<br />
+		<br/>
+
+
+		<h3>Documents</h3>
+
+		<hr />
+
+  <div class="tab-pane fade show active" id="Documents">
+		<br/>
+
+		<div class="row">
+		  <div class="col-sm-2">Plan Nacional de Competencias Digitales</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://espanadigital.gob.es/sites/espanadigital/files/2022-06/Plan%20Nacional%20de%20Competencias%20Digitales.pdf" target="_blank">Plan Nacional de Competencias Digitales</a></div>
+
+		</div>
+		
+		<div class="row">
+		  <div class="col-sm-2">EU Itinerario hacia la Década Digital</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://espanadigital.gob.es/sites/espanadigital/files/2022-06/Propuesta%20de%20Itinerario%20hacia%20la%20D%C3%A9cada%20Digital%20para%202030.pdf" target="_blank">DECISIÓN DEL PARLAMENTO EUROPEO Y DEL CONSEJO por la que se establece el programa de política «Itinerario hacia la Década Digital» para 2030</a></div>
+
+		</div>
+		
+		<br/>
+		
+		<div class="row">
+		  <div class="col-sm-2">Carta de Derechos Digitales</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://portal.mineco.gob.es/RecursosNoticia/mineco/prensa/ficheros/Carta_Derechos_Digitales_RedEs.pdf" target="_blank">Carta de Derechos Digitales</a></div>
+
+		</div>
+
+		<br />
+		
+  </div>
 
 
   
