--- a/digital.html
+++ b/digital.html
@@ -147,13 +147,22 @@
 		<br/>
 
 		<div class="row">
-		  <div class="col-sm-2">Competència Digital Docent</div>
+		  <div class="col-sm-2">Catàleg d'equipament i productes TIC</div>
 		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6853&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=6853&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 13 de juliol de 2022, de la conselleria d'Educació, Cultura i Esport, per la qual es creen els Centres de Formació, Innovació i Recursos Educatius Específics Digital Docent i Centre d'Innovació Digital Avançat de la Comunitat Valenciana. [2022/6853].</a></div>
+		  <div class="col-sm-8"><a href="RESOLUCIÓ de 8 de juliol de 2022, del director general de Tecnologies de la Informació i les Comunicacions, de la Conselleria d'Hisenda i Model Econòmic, per la qual s'actualitza l'annex del catàleg d'equipament i productes TIC susceptible de ser contractat pels centres educatius de la Generalitat. [2022/6721]" target="_blank">RESOLUCIÓ de 8 de juliol de 2022, del director general de Tecnologies de la Informació i les Comunicacions, de la Conselleria d'Hisenda i Model Econòmic, per la qual s'actualitza l'annex del catàleg d'equipament i productes TIC susceptible de ser contractat pels centres educatius de la Generalitat. [2022/6721]</a></div>
 
 		</div>
 		
 		<br/>
+		
+		<br/>
+
+		<div class="row">
+		  <div class="col-sm-2"></div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/6853&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=6853&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 13 de juliol de 2022, de la conselleria d'Educació, Cultura i Esport, per la qual es creen els Centres de Formació, Innovació i Recursos Educatius Específics Digital Docent i Centre d'Innovació Digital Avançat de la Comunitat Valenciana. [2022/6853].</a></div>
+
+		</div>
 		
   </div>
   
