--- a/digital.html
+++ b/digital.html
@@ -119,6 +119,21 @@
 		
 		<br/>
 		
+		<div class="row">
+		  <div class="col-sm-2">Reglamento de Actuación y Funcionalidad del setor público por medios electrónicos</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2021-5032" target="_blank">https://www.boe.es/buscar/act.php?id=BOE-A-2021-5032</a></div>
+
+		</div>
+  </div>
+		<br/>
+		
+		<div class="row">
+		  <div class="col-sm-2">Esquema Nacional de Seguridad</div>
+		  <div class="col-sm-1">INDEX</div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2022-7191" target="_blank">Real Decreto 311/2022, de 3 de mayo, por el que se regula el Esquema Nacional de Seguridad</a></div>
+
+		</div>
   </div>
   
 
