--- a/digital.html
+++ b/digital.html
@@ -122,7 +122,7 @@
 		<div class="row">
 		  <div class="col-sm-2">Reglamento de Actuación y Funcionalidad del setor público por medios electrónicos</div>
 		  <div class="col-sm-1">INDEX</div>
-		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2021-5032" target="_blank">https://www.boe.es/buscar/act.php?id=BOE-A-2021-5032</a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2021-5032" target="_blank">Real Decreto 203/2021, de 30 de marzo, por el que se aprueba el Reglamento de actuación y funcionamiento del sector público por medios electrónicos.</a></div>
 
 		</div>
   </div>
