--- a/digital.html
+++ b/digital.html
@@ -147,17 +147,18 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Protecció de Dades</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2018/11040&L=0" target="_blank">RESOLUCIÓ de 28 de juny de 2018, de la Sotssecretaria de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es dicten instruccions per al compliment de la normativa de protecció de dades en els centres educatius públics de titularitat de la Generalitat. [2018/11040]</a></div>
 
 
+	  	<br />
 	  	<br />
 
 		</div>
 		
 		<div class="row">
 		  <div class="col-sm-2">Certificació Competència Digital Docent</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="" target="_blank">Resolución de 1 de julio de 2022, de la Dirección General de Evaluación y Cooperación Territorial, por la que se publica el Acuerdo de la Conferencia Sectorial de Educación sobre la certificación, acreditación y reconocimiento de la competencia digital docente.</a></div>
 
 		</div>
@@ -166,7 +167,7 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Catàleg d'equipament i productes TIC</div>
-		  <div class="col-sm-1">INDEX</div>
+                  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8"><a href="RESOLUCIÓ de 8 de juliol de 2022, del director general de Tecnologies de la Informació i les Comunicacions, de la Conselleria d'Hisenda i Model Econòmic, per la qual s'actualitza l'annex del catàleg d'equipament i productes TIC susceptible de ser contractat pels centres educatius de la Generalitat. [2022/6721]" target="_blank">RESOLUCIÓ de 8 de juliol de 2022, del director general de Tecnologies de la Informació i les Comunicacions, de la Conselleria d'Hisenda i Model Econòmic, per la qual s'actualitza l'annex del catàleg d'equipament i productes TIC susceptible de ser contractat pels centres educatius de la Generalitat. [2022/6721]</a></div>
 
 		</div>
