Curriculum Infantil i Primària GVA - actualització

--- a/normativa.html
+++ b/normativa.html
@@ -174,13 +174,15 @@
 
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Infantil</div>
-		  <div class="col-sm-1"><a href="#"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7571&L=0" target="_blank">DECRET 100/2022, de 29 de juliol, del Consell, pel qual s'estableix l'ordenació i el currículum d'Educació Infantil. [2022/7571] </a></div>
 		</div>
 
+		<br />
+
 		<div class="row">
 		  <div class="col-sm-2">Curriculum Primaria</div>
-		  <div class="col-sm-1"><a href="#"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7572&L=0" target="_blank">DECRET 106/2022, de 5 d'agost, del Consell, d'ordenació i currículum de l'etapa d'Educació Primària. [2022/7572]</a></div>
 		</div>
 
