--- a/normativa.html
+++ b/normativa.html
@@ -186,6 +186,15 @@
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7572&L=0" target="_blank">DECRET 106/2022, de 5 d'agost, del Consell, d'ordenació i currículum de l'etapa d'Educació Primària. [2022/7572]</a></div>
 		</div>
 
+
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">Curriculum Secundària</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7573&L=0" target="_blank">DECRET 107/2022, de 5 d'agost, del Consell, pel qual s'estableix l'ordenació i el currículum de l'Educació Secundària Obligatòria. [2022/7573] </a></div>
+		</div>
+
 		<br />
 
 		<br />
