--- a/normativa.html
+++ b/normativa.html
@@ -197,6 +197,14 @@
 
 		<br />
 
+		<div class="row">
+		  <div class="col-sm-2">Curriculum Batxiller</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7578&L=0" target="_blank">DECRET 108/2022, de 5 d'agost, del Consell, pel qual s'estableixen l'ordenació i el currículum de Batxillerat. [2022/7578] </a></div>
+		</div>
+
+		<br />
+
 		<br />
 
   </div>
