Decret de Dependència

--- a/normativa.html
+++ b/normativa.html
@@ -205,6 +205,15 @@
 
 		<br />
 
+		<div class="row">
+		  <div class="col-sm-2">Dependència</div>
+		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/resultat-dogv?signatura=2022/7569&L=0" target="_blank">DECRET 102/2022, de 5 d'agost, del Consell, pel qual es modifica el Decret 62/2017, de 19 de maig, del Consell, pel qual s'estableix el procediment per a reconéixer el grau de dependència a les persones i l'accés al sistema públic de serveis i prestacions econòmiques. [2022/7569] </a></div>
+		</div>
+
+
+		<br />
+
 		<br />
 
   </div>
