--- a/normativa.html
+++ b/normativa.html
@@ -378,6 +378,7 @@
 		<br />
 		
 	
+		<div class="row">
 		  <div class="col-sm-2">2022-2023 Instruccions CEE</div>
 		  <div class="col-sm-1"><span class="badge bg-primary">VIGENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2022/7099&L=0&&texto=&solo_titulo=1&anyo_codigo=2022&codigo=7099&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 21 de juliol de 2022, del secretari autonòmic d'Educació i Formació Professional, per la qual es dicten instruccions per a l'organització i el funcionament dels centres d'educació especial sostinguts amb fons públics per al curs 2022-2023. [2022/7099]</a></div>
